# 3D_Unreplicated_MaxEnt

./: License  README.md  Untitled.ipynb
Data/Final_Configurations/t_0_results/: configuration_init_1.txt  configuration_init_10.txt  configuration_init_11.txt  configuration_init_12.txt  configuration_init_13.txt  configuration_init_14.txt  configuration_init_15.txt  configuration_init_16.txt  configuration_init_17.txt  configuration_init_18.txt  configuration_init_19.txt  configuration_init_2.txt  configuration_init_20.txt  configuration_init_21.txt  configuration_init_22.txt  configuration_init_23.txt  configuration_init_24.txt  configuration_init_25.txt  configuration_init_26.txt  configuration_init_27.txt  configuration_init_28.txt  configuration_init_29.txt  configuration_init_3.txt  configuration_init_31.txt  configuration_init_32.txt  configuration_init_33.txt  configuration_init_34.txt  configuration_init_36.txt  configuration_init_37.txt  configuration_init_39.txt  configuration_init_4.txt  configuration_init_5.txt  configuration_init_6.txt  configuration_init_7.txt  configuration_init_8.txt  configuration_init_9.txt
Data/Final_Configurations/t_averaged_results/: configuration_init_11.txt  configuration_init_14.txt  configuration_init_16.txt  configuration_init_17.txt  configuration_init_19.txt  configuration_init_2.txt  configuration_init_20.txt  configuration_init_21.txt  (+59 more)
Data/Initial_Contacts/: t_averaged_normalized_array.txt
Inverse Monte Carlo/: CMakeLists.txt  Functions.h  main.cpp
Inverse_Monte_Carlo/: CMakeLists.txt  Moves.h  main.cpp
(+332 files in other folders)
